--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,17 +4,7 @@
 # also can optionally require approval from a code owner before the
 # author can merge a pull request in the repository.
 
-wallet/                 @cdecker
-*.py                    @cdecker
-
-wallet/invoices.*       @ZmnSCPxj
-plugins/multifundchannel.c @ZmnSCPxj
-doc/BACKUP.md           @ZmnSCPxj @cdecker
-
-common/param.*          @wythe
-common/json.*           @wythe
-common/json_tok.*       @wythe
-common/wallet_tx.*      @wythe
+*                       @gruve-p
 
 # See https://help.github.com/articles/about-codeowners/ for more
 # information
