--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -1,15 +1,15 @@
 ---
-name: Mac OS pytest
-on: [pull_request]
+name: CI
+on: [push, pull_request]
 jobs:
   smoke-test:
-    name: Smoke Test macOS
+    name: Build on macOS
     runs-on: macos-latest
     env:
       DEVELOPER: 1
       VALGRIND: 0
-      EXPERIMENTAL_FEATURES: 1
-      COMPAT: 0
+      EXPERIMENTAL_FEATURES: 0
+      COMPAT: 1
     strategy:
       fail-fast: true
     steps:
@@ -26,14 +26,14 @@ jobs:
 
       - name: Install dependencies
         run: |
-          export BITCOIN_VERSION=0.20.1
+          export GROESTLCOIN_VERSION=2.20.1
           brew install wget python autoconf automake libtool python3 gmp gnu-sed gettext libsodium
 
           (
             cd /tmp/
-            wget https://storage.googleapis.com/c-lightning-tests/bitcoin-$BITCOIN_VERSION-osx64.tar.gz -O bitcoin.tar.gz
-            tar -xvzf bitcoin.tar.gz
-            sudo mv bitcoin-$BITCOIN_VERSION/bin/* /usr/local/bin
+            wget https://github.com/Groestlcoin/groestlcoin/releases/download/v2.20.1/groestlcoin-2.20.1-osx64.tar.gz -O groestlcoin.tar.gz
+            tar -xvzf groestlcoin.tar.gz
+            sudo mv groestlcoin-$GROESTLCOIN_VERSION/bin/* /usr/local/bin
           )
 
           pip install --upgrade mako pip
@@ -47,8 +47,6 @@ jobs:
           EXPERIMENTAL_FEATURES: ${{ matrix.EXPERIMENTAL_FEATURES }}
           COMPILER: ${{ matrix.COMPILER }}
           COMPAT: ${{ matrix.COMPAT }}
-          PYTEST_PAR: ${{ matrix.PYTEST_PAR }}
-          PYTEST_OPTS: ${{ matrix.PYTEST_OPTS }}
           NO_PYTHON: ${{ matrix.NO_PYTHON }}
           COPTFLAGS: ${{ matrix.COPTFLAGS }}
           NETWORK: ${{ matrix.NETWORK }}
@@ -59,44 +57,25 @@ jobs:
           export PATH="/usr/local/opt:/Users/runner/.local/bin:$PATH"
           export LDFLAGS="-L/usr/local/opt/sqlite/lib"
           export CPPFLAGS="-I/usr/local/opt/sqlite/include"
+          export CFLAGS="-Wno-error -Wno-nullability-completeness -Wno-expansion-to-defined -Wno-builtin-requires-header"
+          export CXXFLAGS="-Wno-error -Wno-nullability-completeness -Wno-expansion-to-defined -Wno-builtin-requires-header"
 
           pip3 install --user -U \
             -r requirements.lock
 
-          pip3 install --user --no-index \
-            --use-feature=in-tree-build \
-            ./contrib/pyln-spec/bolt7 \
-            ./contrib/pyln-client \
-            ./contrib/pyln-proto \
-            ./contrib/pyln-testing
-
-          # Install utilities that aren't dependencies, but make
-          # running tests easier/feasible on CI (and pytest which
-          # keeps breaking the rerunfailures plugin).
-          pip3 install --user -U \
-            blinker \
-            flake8 \
-            flaky \
-            mako \
-            pytest-sentry \
-            pytest-test-groups==1.0.3 \
-            pytest-custom-exit-code==0.3.0 \
-            pytest-json-report
-
-          cat << EOF > pytest.ini
-          [pytest]
-          addopts=-p no:logging --color=yes --timeout=600 --timeout-method=thread --test-group-random-seed=42 --force-flaky --no-success-flaky-report --max-runs=3 --junitxml=report.xml --json-report --json-report-file=report.json --json-report-indent=2
-          markers =
-              slow_test: marks tests as slow (deselect with '-m "not slow_test"')
-          EOF
-
           ./configure
           make
 
-      - name: Upload Unit Test Results
-        if: always()
+      - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: Junit Report ${{ github.run_number }}.${{ matrix.cfg }}
-          path: report.*
+          name: clightning-${{ github.sha }}-macos
+          path: |
+            lightningd/lightningd
+            cli/lightning-cli
           if-no-files-found: ignore
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: clightning-${{ github.sha }}-macos
