--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -36,7 +36,7 @@ jobs:
             sqlite3 \
             curl
 
-          pip install --user -U wheel pip mako==1.1.5 mrkd==0.1.6 mistune==0.8.4 jinja2==2.11.3
+          pip install --user -U wheel pip mako==1.1.5 mrkd==0.1.6 mistune==0.8.4 jinja2==2.11.3 MarkupSafe==2.0.1
           ln -s /root/.local/bin/mrkd /usr/local/bin/mrkd
 
         run: |
