--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          export PATH="/usr/local/opt:/Users/runner/.local/bin:/Users/runner/Library/Python/3.9/bin:$PATH"
           export GROESTLCOIN_VERSION=2.20.1
           brew install wget python autoconf automake libtool python3 gmp gnu-sed gettext libsodium
 
