--- a/contrib/docker/Dockerfile.tester
+++ b/contrib/docker/Dockerfile.tester
@@ -62,7 +62,7 @@ RUN echo "tester ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/tester && \
     chmod 0440 /etc/sudoers.d/tester
 
 RUN cd /tmp/ && \
-  wget https://github.com/Groestlcoin/groestlcoin/releases/download/v2.19.1/groestlcoin-$GROESTLCOIN_VERSION-x86_64-linux-gnu.tar.gz && \
+  wget https://github.com/Groestlcoin/groestlcoin/releases/download/v$GROESTLCOIN_VERSION/groestlcoin-$GROESTLCOIN_VERSION-x86_64-linux-gnu.tar.gz && \
 	tar -xjf groestlcoin-$GROESTLCOIN_VERSION-x86_64-linux-gnu.tar.gz && \
 	mv groestlcoin-$GROESTLCOIN_VERSION/bin/* /usr/local/bin && \
 	rm -rf \
