--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -41,9 +41,9 @@ jobs:
 
         run: |
           # fatal: unsafe repository ('/Users/runner/work/lightning/lightning' is owned by someone else)
-          git config --global --add safe.directory `pwd`
+          git config --global --add safe.directory $GITHUB_WORKSPACE
           git submodule update --init --recursive
-          
+
           # Configure and build
           ./configure CC="$CC"
           gmake
