try to fix freebsd

--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -27,6 +27,7 @@ jobs:
             gmake \
             git \
             python \
+            postgresql12-server \
             autoconf \
             automake \
             libtool \
@@ -39,6 +40,7 @@ jobs:
           pip install --user -U wheel pip mako==1.1.5 mrkd==0.1.6 mistune==0.8.4 jinja2==2.11.3 MarkupSafe==2.0.1
           ln -s /root/.local/bin/mrkd /usr/local/bin/mrkd
         run: |
+          PATH=/root/.local/bin:$PATH
           git clone https://github.com/lightningnetwork/lightning-rfc.git ../lightning-rfc
           # fatal: unsafe repository ('/Users/runner/work/lightning/lightning' is owned by someone else)
           git config --global --add safe.directory $GITHUB_WORKSPACE
