--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,7 +17,7 @@ jobs:
         password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: build the Docker image
-      run: docker build -t groestlcoin/lightning .
+      run: docker build -t groestlcoin/lightning . --tag groestlcoin/lightning:v0.12.0
 
     - name: docker push
       run: docker push groestlcoin/lightning:v0.12.0
