--- a/contrib/docker/Dockerfile.alpine
+++ b/contrib/docker/Dockerfile.alpine
@@ -38,8 +38,7 @@ FROM alpine:3.16 as runner
 
 RUN apk update && \
     apk add \
-      postgresql \
-      groestlcoin-cli
+      postgresql
 
 COPY --from=builder /usr/bin/lightningd /usr/bin/
 COPY --from=builder /usr/bin/lightning-cli /usr/bin/
