--- a/.github/workflows/bsd.yml
+++ b/.github/workflows/bsd.yml
@@ -49,13 +49,21 @@ jobs:
           # Configure and build
           ./configure CC="$CC"
           gmake
+          gmake install
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
         name: clightning-${{ github.sha }}-freebsd
         path: |
-          lightningd/lightningd
-          cli/lightning-cli
+          /usr/local/bin/lightningd
+          /usr/local/bin/lightning-cli
+          /usr/local/bin/lightning-hsmtool
+          /usr/local/libexec/c-lightning
+          /usr/local/share/man/man1
+          /usr/local/share/man/man5
+          /usr/local/share/man/man7
+          /usr/local/share/man/man8
+          /usr/local/share/doc/c-lightning
         if-no-files-found: error
         retention-days: 7
 
