--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -21,7 +21,7 @@ jobs:
           export PATH="/usr/local/opt:/Users/runner/.local/bin:/Users/runner/Library/Python/3.10/bin:$PATH"
 
           export GROESTLCOIN_VERSION=2.20.1
-          brew install wget autoconf automake libtool python@3.10 gmp gnu-sed gettext libsodium
+          brew install wget autoconf automake libtool python@3.10 gmp gnu-sed gettext libsodium protobuf
 
           (
             cd /tmp/
