--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -25,7 +25,7 @@ jobs:
 
           (
             cd /tmp/
-            wget https://github.com/Groestlcoin/groestlcoin/releases/download/v24.0.1/groestlcoin-24.0.1-osx64.tar.gz -O groestlcoin.tar.gz
+            wget https://github.com/Groestlcoin/groestlcoin/releases/download/v24.0.1/groestlcoin-24.0.1-x86_64-apple-darwin.tar.gz -O groestlcoin.tar.gz
             tar -xvzf groestlcoin.tar.gz
             sudo mv groestlcoin-$GROESTLCOIN_VERSION/bin/* /usr/local/bin
           )
