--- a/.github/workflows/macos.yaml
+++ b/.github/workflows/macos.yaml
@@ -30,7 +30,7 @@ jobs:
             sudo mv groestlcoin-$GROESTLCOIN_VERSION/bin/* /usr/local/bin
           )
 
-          python3.10 -m pip install -U --user poetry wheel pip
+          python3.10 -m pip install -U --user poetry==1.3.2 wheel pip
           python3.10 -m poetry install
           python3.10 -m pip install -U --user mako
 
