--- a/contrib/reprobuild/Dockerfile.bionic
+++ b/contrib/reprobuild/Dockerfile.bionic
@@ -1,4 +1,4 @@
-FROM bionic
+FROM ubuntu:18.04
 
 ENV TZ=UTC
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
@@ -6,8 +6,8 @@ ENV RUST_PROFILE=release
 ENV PATH=/root/.cargo/bin:/root/.pyenv/shims:/root/.pyenv/bin:$PATH
 ENV PROTOC_VERSION=22.0
 
-RUN sed -i '/updates/d' /etc/apt/sources.list && \
-    sed -i '/security/d' /etc/apt/sources.list
+#RUN sed -i '/updates/d' /etc/apt/sources.list && \
+#    sed -i '/security/d' /etc/apt/sources.list
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
@@ -46,7 +46,7 @@ RUN wget https://bootstrap.pypa.io/get-pip.py -O /tmp/get-pip.py && python3 /tmp
 RUN wget https://sh.rustup.rs -O rustup-install.sh && \
     bash rustup-install.sh --default-toolchain none --quiet -y && \
     rm rustup-install.sh && \
-    /root/.cargo/bin/rustup install 1.62
+    /root/.cargo/bin/rustup install 1.65
 
 # Download protoc manually, it is in the update repos which we
 # disabled above, so `apt-get` can't find it anymore.
@@ -56,11 +56,12 @@ RUN cd /tmp/ && \
     mv bin/protoc /usr/local/bin && \
     rm -rf include bin protoc-${PROTOC_VERSION}-linux-x86_64.zip
 
+RUN git config --global --add safe.directory '*'
+
 RUN mkdir /build
 WORKDIR /build
 
-CMD git clone /repo /build \
-    && poetry export -o requirements.txt --without-hashes \
+CMD poetry export -o requirements.txt --without-hashes \
     && pip install -r requirements.txt\
     && tools/build-release.sh zipfile \
     && mkdir -p /repro \
@@ -68,6 +69,4 @@ CMD git clone /repo /build \
     && unzip /build/release/*.zip \
     && cd clightning* \
     && tools/repro-build.sh \
-    && cp *.xz /build/release/* /repo/release/ \
-    && cd /repo/release \
-    && sha256sum *
+    && cp *.xz /build/release/
