--- a/contrib/reprobuild/Dockerfile.bionic
+++ b/contrib/reprobuild/Dockerfile.bionic
@@ -10,38 +10,38 @@ ENV PROTOC_VERSION=22.0
 #    sed -i '/security/d' /etc/apt/sources.list
 
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-      ca-certificates \
-      sudo \
-      build-essential \
-      libsodium23 \
-      libpq-dev \
-      git \
-      file \
-      autoconf \
-      debianutils \
-      gettext \
-      zip \
-      unzip \
-      wget
+  && apt-get install -y --no-install-recommends \
+  ca-certificates \
+  sudo \
+  build-essential \
+  libsodium23 \
+  libpq-dev \
+  git \
+  file \
+  autoconf \
+  debianutils \
+  gettext \
+  zip \
+  unzip \
+  wget
 
 # Need to fetch a python version that is >= 3.7 since that's the
 # lowest version supported by pyln. This is just temporary until we
 # drop support for ubuntu 18.04
-RUN git clone https://github.com/pyenv/pyenv.git /root/.pyenv \
-    && apt-get install -y --no-install-recommends \
-      libbz2-dev \
-      libffi-dev \
-      libreadline-dev \
-      libsqlite3-dev \
-      libssl-dev \
-      zlib1g-dev \
-    && pyenv install 3.7.0 \
-    && pyenv global 3.7.0
+RUN git clone https://github.com/pyenv/pyenv.git /root/.pyenv && \
+    apt-get install -y --no-install-recommends \
+    libbz2-dev \
+    libffi-dev \
+    libreadline-dev \
+    libsqlite3-dev \
+    libssl-dev \
+    zlib1g-dev && \
+    pyenv install 3.7.0 && \
+    pyenv global 3.7.0
 
 RUN wget https://bootstrap.pypa.io/get-pip.py -O /tmp/get-pip.py && python3 /tmp/get-pip.py \
-	&& rm /tmp/get-pip.py \
-	&& pip install poetry
+	  && rm /tmp/get-pip.py \
+	  && pip install poetry
 
 RUN wget https://sh.rustup.rs -O rustup-install.sh && \
     bash rustup-install.sh --default-toolchain none --quiet -y && \
@@ -62,10 +62,11 @@ RUN mkdir /build
 WORKDIR /build
 
 CMD poetry export -o requirements.txt --without-hashes \
-    && pip install -r requirements.txt\
-    && mkdir -p /repro \
-    && cd /repro \
-    && unzip /build/release/*.zip \
-    && cd clightning* \
-    && tools/repro-build.sh \
-    && cp *.xz /build/release/
+  && pip install -r requirements.txt \
+  && tools/build-release.sh zipfile \
+  && mkdir -p /repro \
+  && cd /repro \
+  && unzip /build/release/*.zip \
+  && cd clightning* \
+  && tools/repro-build.sh \
+  && cp *.xz /build/release/
