--- a/contrib/docker/Dockerfile.builder.fedora
+++ b/contrib/docker/Dockerfile.builder.fedora
@@ -19,6 +19,7 @@ RUN dnf update -y && \
 		wget \
 		xz \
 		zlib-devel && \
+	dnf remove -y python-setuptools && \
 	dnf clean all
 
 RUN wget https://github.com/Groestlcoin/groestlcoin/releases/download/v$GROESTLCOIN_VERSION/groestlcoin-$GROESTLCOIN_VERSION-x86_64-linux-gnu.tar.gz -O groestlcoin.tar.gz && \
